fixed an issue with alignment in editboxes when sliding in

--- a/components/common/auto_height_switcher.scss
+++ b/components/common/auto_height_switcher.scss
@@ -3,4 +3,8 @@
 
 .AutoHeight {
     display: block;
+
+    > div {
+        display: block;
+    }
 }
